Updated the available sensors message to use RemoteSourceAvailableSensors instead of AvailableSensorsReplicationMessage

--- a/.IoT Samples/M2MqttClient/M2MqttExampleClient.csproj
+++ b/.IoT Samples/M2MqttClient/M2MqttExampleClient.csproj
@@ -76,8 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="7.1.1" />
-    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.0.0-rc0002" />
-    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.0-rc0001" />
+    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.0.0" />
+    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GatewayConfigurationFiles\" />
