--- a/.IoT Samples/M2MqttClient/app.config
+++ b/.IoT Samples/M2MqttClient/app.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <!-- AtMostOnce = 0, AtLeastOnce = 1, ExactlyOnce = 2 -->
+    <add key="qualityofservice" value="AtMostOnce"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
