--- a/.IoT Samples/M2MqttClient/M2MqttExampleClient.csproj
+++ b/.IoT Samples/M2MqttClient/M2MqttExampleClient.csproj
@@ -25,6 +25,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -75,11 +77,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="7.1.1" />
-    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.0.0" />
-    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.0" />
+    <PackageReference Include="CsvHelper" Version="2.16.3" />
+    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.4.1" />
+    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.1-alpha0003" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GatewayConfigurationFiles\" />
+  </ItemGroup>  
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
   </ItemGroup>
 </Project>
