--- a/.IoT Samples/M2MqttClient40/M2MqttExampleClient40.csproj
+++ b/.IoT Samples/M2MqttClient40/M2MqttExampleClient40.csproj
@@ -54,11 +54,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="2.9.1" />
-    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.0.0" />
-    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.0-rc0001" />
+    <PackageReference Include="CsvHelper" Version="2.16.3" />
+    <PackageReference Include="Kognifai.Edge.Serialization" Version="2.4.1" />
+    <PackageReference Include="Kognifai.M2Mqtt" Version="1.1.1-alpha0003" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GatewayConfigurationFiles\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
   </ItemGroup>
 </Project>
